--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 
 <!DOCTYPE html>
 <html>
-<title>John Urschel's Homepage</title>
+<title>Matthew Easton's Website</title>
 
 <head>
 <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
@@ -33,66 +33,14 @@
 </head>
 <!--0A2162 --> <!--"Helvetica", "Arial"-->
 <body>
-<img style="float:right" width="375"  src="photographs/mit.jpg" hspace="30px" vspace="20px" >
+<img style="float:right" width="375"  src="images/easton.jpg" hspace="30px" vspace="20px" >
 <!--img style="float:right" width="375"  src="photographs/newheadshot.png" hspace="20px" vspace="40px" -->
-<h1 style="margin-top:27mm; margin-bottom:2mm;">John Urschel</h1>
-<font face="courier,Arial">urschel AT mit DOT edu</font>
+<h1 style="margin-top:27mm; margin-bottom:2mm;">Matthew Easton</h1>
+<font face="courier,Arial">me2713 (AT) columbia (DOT) edu</font>
 
 <p style="margin-top:30mm; margin-bottom:0mm">
-I am an assistant professor in the MIT Math department. My research is focused on matrix analysis and numerical analysis, with an emphasis on theoretical results and provable guarantees for practical problems. 
+I am a fifth-year economics PhD student at <a href="https://econ.columbia.edu/"> Columbia University</a>. My current research interests are urban and spatial economics.
 </p>
-
-<p>
-I am also a Junior Fellow at the Harvard Society of Fellows (currently on leave). Previously, I was a member of the Institute for Advanced Study, under the supervision of <a href="https://www.ias.edu/math/people/faculty/sarnak">Peter Sarnak</a>.
-I completed my PhD in math at MIT in 2021, and had the pleasure of being advised by <a href="https://math.mit.edu/~goemans/">Michel Goemans</a>.
-</p>
-<p>
-Here are a few selected publications: <ul>
-<li> A New Upper Bound for the Growth Factor in Gauss. Elimin. with Complete Pivoting, Preprint [<a href="preprints/wilk.pdf">PDF</a>] </li>
-<li> Nodal Decompositions of Symmetric Matrices, Preprint [<a href="preprints/nodal.pdf">PDF</a>] </li>
-<li> Representing the Special Linear Group with Block Unitriangular Matrices, PNAS Nexus (2023) [<a href="preprints/sln.pdf">PDF</a>]</li>
-<li> Maximum Spread of Graphs and Bipartite Graphs, Comm. AMS (2022) [<a href="preprints/spread.pdf">PDF</a>] </li>
-<!-- <li> Uniform Error Estimates for the Lanczos Method, SIMAX (2021) [<a href="publications/p2021c.pdf">PDF</a>] </li>
-<li> On the Characterization and Uniqueness of Centroidal Voronoi Tessellations, SINUM (2017) [<a href="publications/p2017d.pdf">PDF</a>] </li> -->
-<li> Learning Determinantal Point Processes with Moments and Cycles, ICML (2017) [<a href="publications/p2017c.pdf">PDF</a>] </li>
-</ul> </p>
-
-<p style="margin-bottom:1cm; margin-top:0cm;">
-Below, you can find a brief description of my research, a full list of my publications, my current and past teaching, and some outreach programs I am involved in.
-Here is a (most likely outdated) <a href="job-materials/cv.pdf">CV</a>.
-</p>
-
-
-<hr>
-<p style="margin-bottom:0cm; margin-top:1cm;">
-
- <h2 style="margin-bottom:5mm;"> Research: </h2>
-My interests largely consist of topics in matrix analysis and numerical analysis, many of which are motivated by problems from other areas of mathematics, such as combinatorics, machine learning, probability, and theoretical computer science. A brief description of these two topics and my interests follows.
-<br> <br>
-
-
-  <b>Matrix Analysis: </b> Linear algebra is a fundamental subject, underpinning almost all areas of mathematics. Matrix analysis, broadly defined, is the study of basis-dependent linear algebra. This additional structure is often crucial -- linear maps encountered in practice may have some special property in a given basis, such as sparsity, symmetry, or non-negativity. I am especially interested in spectral graph theory, the study of a discrete graph/network through the analysis of spectral properties of a matrix representation of it. I am also quite interested in determinantal point processes, a popular class of point processes with an elegant linear algebraic formulation.<br> <br>
-
-<i> Selected Publications: </i> <ul>
-<li> Nodal Decompositions of Symmetric Matrices, Preprint [<a href="preprints/nodal.pdf">PDF</a>] </li>
-<li> Representing the Special Linear Group with Block Unitriangular Matrices, PNAS Nexus (2023) [<a href="preprints/sln.pdf">PDF</a>] </li>
-<li> Maximum Spread of Graphs and Bipartite Graphs, Comm. AMS (2022) [<a href="preprints/spread.pdf">PDF</a>] </li>
-<li> Discrete Trace Thms. and Energy Min. Spring Embeddings of Planar Graphs, LAA (2021). [<a href="publications/p2021b.pdf">PDF</a>]</li>
-<li> Learning Determinantal Point Processes with Moments and Cycles, ICML (2017) [<a href="publications/p2017c.pdf">PDF</a>] </li>
-</ul>
-
-<br>
-
-<b>Numerical Analysis: </b> </font> The field of numerical analysis is primarily concerned with finding efficient and accurate approximate solutions to problems in mathematics. Topics include the numerical solution to linear systems, non-linear equations, eigenvalue problems, numerical differentiation or integration, differential equations, and other problems. I am particularly interested in numerical linear algebra and the solution of linear systems Ax = b and eigenvalue problems Ax = &lambda;x. My research is mostly focused on matrix factorizations and moment-based algorithms.  <br> <br>
-
-<i> Selected Publications: </i> <ul>
-<li> A New Upper Bound for the Growth Factor in Gauss. Elimin. with Complete Pivoting, Preprint [<a href="preprints/wilk.pdf">PDF</a>] </li>
-<li> Estimating the Matrix p -> q Norm, Preprint [<a href="preprints/norm.pdf">PDF</a>] </li>
-<li> Some New Results on the Maximum Growth Factor in Gaussian Elimination, SIMAX, to appear [<a href="preprints/gauss.pdf">PDF</a>] </li>
-<li> Uniform Error Estimates for the Lanczos Method, SIMAX (2021) [<a href="publications/p2021c.pdf">PDF</a>] </li>
-<li> On the Characterization and Uniqueness of Centroidal Voronoi Tessellations, SINUM (2017) [<a href="publications/p2017d.pdf">PDF</a>] </li>
-
-</ul>
 
 <br>
 
@@ -101,8 +49,7 @@ My interests largely consist of topics in matrix analysis and numerical analysis
 
 <p style="margin-top:1cm; margin-bottom:1cm">
 
-<h2 style="margin-bottom:0mm;"> Papers: </h2> &#10039; = select publication, <font size="+1"><font face="courier,Arial">u</font> </font> = undergraduate research project<br>
-
+<h2 style="margin-bottom:0mm;"> Papers: <br>
 
 <ul>
 
@@ -397,8 +344,7 @@ My interests largely consist of topics in matrix analysis and numerical analysis
 
 
 <hr>
-<p> <font size="-1"> &copy; 2020 John Urschel -- template shamelessly stolen from <a href="https://tselilschramm.org/">Tselil Schramm</a>. <br>
-<a href="http://accessibility.mit.edu">Accessibility</a>
+<p> <font size="-1"> &copy; 2024 Matthew Easton -- template shamelessly stolen from <a href="https://math.mit.edu/~urschel/">John Urschel</a>. <br>
  </font>
 
 
