--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 </head>
 <!--0A2162 --> <!--"Helvetica", "Arial"-->
 <body>
-<img style="float:right" width="375"  src="images/easton.jpg" hspace="30px" vspace="20px" >
+<img style="float:right" width="375"  src="images/easton.png" hspace="30px" vspace="20px" >
 <!--img style="float:right" width="375"  src="photographs/newheadshot.png" hspace="20px" vspace="40px" -->
 <h1 style="margin-top:27mm; margin-bottom:2mm;">Matthew Easton</h1>
 <font face="courier,Arial">me2713 (AT) columbia (DOT) edu</font>
@@ -49,7 +49,7 @@ I am a fifth-year economics PhD student at <a href="https://econ.columbia.edu/">
 
 <p style="margin-top:1cm; margin-bottom:1cm">
 
-<h2 style="margin-bottom:0mm;"> Papers: <br>
+<h2 style="margin-bottom:0mm;"> Papers: </h2> <br> 
 
 <ul>
 
