--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <h1 style="margin-top:27mm; margin-bottom:2mm;">Matthew Easton</h1>
 <font face="courier,Arial">me2713 (AT) columbia (DOT) edu</font>
 
-<p style="margin-top:30mm; margin-bottom:0mm">
+<p style="margin-top:10mm; margin-bottom:0mm">
 I am a fifth-year economics PhD student at <a href="https://econ.columbia.edu/"> Columbia University</a>. My current research interests are urban and spatial economics.
 </p>
 
@@ -49,20 +49,27 @@ I am a fifth-year economics PhD student at <a href="https://econ.columbia.edu/">
 
 <p style="margin-top:1cm; margin-bottom:1cm">
 
-<h2 style="margin-bottom:0mm;"> Papers: </h2> <br> 
+<h2 style="margin-bottom:0mm;"> Papers </h2> <br> 
+
+<h3 style="margin-bottom:0mm;"> Federal Reserve Papers </h3> <br>
 
 <ul>
 
     <li>
         <ptitle>
-        A New Upper Bound for the Growth Factor in Gaussian Elimination with Complete Pivoting<font size="-1"><sup>&#10039;</sup></font>,
+        The Global Saving Glut and the Fall in U.S. Real Interest Rates: A 15-Year Retrospective<font size="-1"><sup>&#10039;</sup></font>,
       </ptitle>
         <author>
-        with Ankit Bisain, Alan Edelman.
+        with Robert Barsky.
       </author>
-        <journal> arXiv, 2023. </journal> [<a href="preprints/wilk.pdf">PDF</a>]
+        <journal> Federal Reserve Bank of Chicago Economic Perspectives, 2021-01. </journal> [<a href="preprints/ep2021_01.pdf">PDF</a>]
         </li>
 
+</ul>
+
+<h3 style="margin-bottom:0mm;"> Working Papers </h3> <br>
+
+<ul>
 
     <li>
         <ptitle>
