--- a/index.html
+++ b/index.html
@@ -51,250 +51,79 @@ I am a fifth-year economics PhD student at <a href="https://econ.columbia.edu/">
 
 <h2 style="margin-bottom:0mm;"> Papers </h2> <br> 
 
-<h3 style="margin-bottom:0mm;"> Federal Reserve Papers </h3> <br>
+<h3 style="margin-bottom:0mm;"> Federal Reserve Papers </h3>
 
 <ul>
 
     <li>
         <ptitle>
-        The Global Saving Glut and the Fall in U.S. Real Interest Rates: A 15-Year Retrospective<font size="-1"><sup>&#10039;</sup></font>,
+        The Global Saving Glut and the Fall in U.S. Real Interest Rates: A 15-Year Retrospective,
       </ptitle>
         <author>
         with Robert Barsky.
       </author>
-        <journal> Federal Reserve Bank of Chicago Economic Perspectives, 2021-01. </journal> [<a href="preprints/ep2021_01.pdf">PDF</a>]
+        <journal> Federal Reserve Bank of Chicago Economic Perspectives, 2021-01. </journal> [<a href="files/ep2021_01.pdf">PDF</a>]
         </li>
 
 </ul>
 
-<h3 style="margin-bottom:0mm;"> Working Papers </h3> <br>
+<h3 style="margin-bottom:0mm;"> Working Papers </h3> 
 
 <ul>
 
     <li>
         <ptitle>
-        Estimating the Matrix p -> q Norm,
+        Populations in Spatial Equilibrium
       </ptitle>
         <author>
-        with Larry Guth, Dominique Maldague.
+        with Patrick Farrell.
       </author>
-        <journal> arXiv, 2023. </journal> [<a href="preprints/norm.pdf">PDF</a>]
+        <journal> December 2023. </journal> [<a href="files/zipf_ef.pdf">PDF</a>]
         </li>
 
   <li>
     <ptitle>
-    Nodal Decompositions of Symmetric Matrices<font size="-1"><sup>&#10039;</sup></font>,
+    Interest Spreads and Margins in Collateral Equilibrium with Heterogeneous Beliefs,
   </ptitle>
     <author>
-    with Theo McKenzie.
+    with Robert Barsky and Avery Bogusz.
   </author>
-    <journal> arXiv, 2023. </journal> [<a href="preprints/nodal.pdf">PDF</a>]
+    <journal> Chicago Fed Working Paper Series, 2022. </journal> [<a href="files/interestRates_bbe.pdf">PDF</a>]
     </li>
 
+</ul>
+
+<h3 style="margin-bottom:0mm;"> Work in Progress </h3> 
+
+<ul>
 
   <li>
     <ptitle>
-    Representing the Special Linear Group with Block Unitriangular Matrices<font size="-1"><sup>&#10039;</sup></font>,
+    Why Have Warmer Cities Grown?
   </ptitle>
-    <journal> PNAS Nexus, 2023. </journal> [<a href="preprints/sln.pdf">PDF</a>]
     </li>
 
 
   <li>
     <ptitle>
-    Some New Results on the Maximum Growth Factor in Gaussian Elimination,
+    A Survey of Unemployment in Metro Areas,
   </ptitle>
     <author>
-    with Alan Edelman.
+    with Donald Davis and Tomasz Michalski.
   </author>
-    <journal> SIAM Journal on Matrix Analysis, to appear. </journal> [<a href="preprints/gauss.pdf">PDF</a>]
     </li>
 
-  <li value="u">
+  <li>
   <ptitle>
-  Hamilton Powers of Eulerian Digraphs<sup><font face="courier,Arial">u</font></sup>,
+  Testing Schelling’s Models of Residential Segregation: A Discrete Choice Approach with Spatial Spillovers,
 </ptitle>
   <author>
-  with Enrico Col&oacute;n.
+  with Donald Davis and Stephan Thies.
 </author>
-  <journal> arXiv, 2022. </journal> [<a href="preprints/hamilton.pdf">PDF</a>]
   </li>
 
-  <li>
-  <ptitle>
-  Maximum Spread of Graphs and Bipartite Graphs<font size="-1"><sup>&#10039;</sup></font>,
-</ptitle>
-  <author>
-  with Jane Breen, Alex Riasanovsky, Michael Tait.
-</author>
-  <journal> Communications of the AMS, 2022. </journal> [<a href="preprints/spread.pdf">PDF</a>]
-  </li>
-
-  <li>
-  <ptitle>
-  Graphs, Principal Minors, and Eigenvalue Problems,
-  </ptitle>
-  <journal> PhD Thesis, MIT, 2021. </journal> [<a href="publications/thesis.pdf">PDF</a>]
-  </li>
-
-  <li>
-  <ptitle>
-  Regarding Two Conjectures on Clique and Biclique Partitions<sup><font face="courier,Arial">u</font></sup>,
-  </ptitle>
-  <author>
-  with Dhruv Rohatgi, Jake Wellens.
-  </author>
-  <journal> Electronic Journal of Combinatorics, 2021. </journal> [<a href="publications/p2021d.pdf">PDF</a>]
-  </li>
-
- <li>
-  <ptitle>
-  Multidimensional Scaling: Approximation and Complexity,
-  </ptitle>
-  <author>
-  with Erik Demaine, Adam Hesterberg, Frederic Koehler, Jayson Lynch.
-  </author>
-  <journal> Proceedings of the 38th International Conference on Machine Learning (ICML 2021). </journal> [<a href="publications/p2021e.pdf">PDF</a>]
-  </li>
-
- <li>
-  <ptitle>
-  Uniform Error Estimates for the Lanczos Method<font size="-1"><sup>&#10039;</sup></font>.
-  </ptitle>
-  <journal> SIAM Journal on Matrix Analysis, 2021. </journal> [<a href="publications/p2021c.pdf">PDF</a>]
-  </li>
-
-<li>
-  <ptitle>
-  Discrete Trace Theorems and Energy Minimizing Spring Embeddings of Planar Graphs,
-  </ptitle>
-  <author>
-  with Ludmil Zikatanov.
-  </author>
-  <journal> Linear Algebra and its Applications, 2021. </journal> [<a href="publications/p2021b.pdf">PDF</a>]
-  </li>
-
- <li>
-  <ptitle>
-  Testing Gap k-Planarity is NP-Complete,
-  </ptitle>
-  <author>
-  with Jake Wellens.
-  </author>
-  <journal> Information Processing Letters, 2021. </journal> [<a href="publications/p2021a.pdf">PDF</a>]
-  </li>
-
-<li>
-  <ptitle>
-  Nodal Decompositions of Graphs.
-  </ptitle>
-  <journal> Linear Algebra and its Applications, 2018. </journal> [<a href="publications/p2018.pdf">PDF</a>]
-  </li>
-
-<li>
-  <ptitle>
-  Maximum Likelihood Estimation of Determinantal Point Processes,
-  </ptitle>
-  <author>
-  with Victor-Emmanuel Brunel,Ankur Moitra, Philippe Rigollet.
-  </author>
-  <journal> arXiv, 2017. </journal> [<a href="publications/p2017e.pdf">PDF</a>]
-  </li>
-
-  <li>
-  <ptitle>
-  On the Characterization and Uniqueness of Centroidal Voronoi Tessellations<font size="-1"><sup>&#10039;</sup></font>.
-  </ptitle>
-  <journal> SIAM Journal on Numerical Analysis, 2017. </journal> [<a href="publications/p2017d.pdf">PDF</a>]
-  </li>
-
-<li>
-  <ptitle>
-  Learning Determinantal Point Processes with Moments and Cycles<font size="-1"><sup>&#10039;</sup></font>,
-  </ptitle>
-  <author>
-  with Victor-Emmanuel Brunel, Ankur Moitra, Philippe Rigollet.
-  </author>
-  <journal> Proceedings of the 34th International Conference on Machine Learning (ICML 2017). </journal> [<a href="publications/p2017c.pdf">PDF</a>]
-  </li>
-
-<li>
-  <ptitle>
-  Rates of Estimation for Determinantal Point Processes,
-  </ptitle>
-  <author>
-  with Victor-Emmanuel Brunel, Ankur Moitra, Philippe Rigollet.
-  </author>
-  <journal> Proceedings of the 30th Annual Conference on Learning Theory (COLT 2017). </journal> [<a href="publications/p2017b.pdf">PDF</a>]
-  </li>
-
-<li>
-  <ptitle>
-  On the Approximation of Laplacian Eigenvalues in Graph Disaggregation,
-  </ptitle>
-  <author>
-  with Xiaozhe Hu, Ludmil Zikatanov.
-  </author>
-  <journal> Linear and Multilinear Algebra, 2017. </journal> [<a href="publications/p2017a.pdf">PDF</a>]
-  </li>
-
-<li>
-  <ptitle>
-  On the Maximal Error of Spectral Approximation of Graph Bisection,
-  </ptitle>
-  <author>
-  with
-  Ludmil Zikatanov.
-  </author>
-  <journal> Linear and Multilinear Algebra, 2016. </journal> [<a href="publications/p2016.pdf">PDF</a>]
-  </li>
-
-<li>
-  <ptitle>
-  A Cascadic Multigrid Algorithm for Computing the Fiedler Vector of Graph Laplacians,
-  </ptitle>
-  <author>
-  with Xiaozhe Hu, Jinchao Xu, Ludmil Zikatanov.
-  </author>
-  <journal> Journal of Computational Mathematics, 2015. </journal> [<a href="publications/p2015.pdf">PDF</a>]
-  </li>
-
-<li>
-  <ptitle>
-  Spectral Bisection of Graphs and Connectedness,
-  </ptitle>
-  <author>
-  with Ludmil Zikatanov.
-  </author>
-  <journal> Linear Algebra and its Applications, 2014. </journal> [<a href="publications/p2014.pdf">PDF</a>]
-  </li>
-
-  <li>
-    <ptitle>
-    Graph-Based Topics in Applied Mathematics,
-    </ptitle>
-    <journal> Master's Thesis, Penn State, 2013. </journal> [<a href="publications/mathesis.pdf">PDF</a>]
-    </li>
-
-<li>
-  <ptitle>
-  A Space-Time Multigrid Method for the Numerical Valuation of Barrier Options,
-  </ptitle>
-  <journal> Communications in Mathematical Finance, 2013. </journal> [<a href="publications/p2013b.pdf">PDF</a>]
-  </li>
-
-<li>
-  <ptitle>
-  Instabilities in the Sun-Jupiter-Asteroid Three Body Problem<sup><font face="courier,Arial">u</font></sup>,
-  </ptitle>
-  <author>
-  with Joseph Galante.
-  </author>
-  <journal> Celestial Mechanics and Dynamical Astronomy, 2013. </journal> [<a href="publications/p2013a.pdf">PDF</a>]
-  </li>
-
-
-</ul> <br> </p>
+</ul>
+ <br> </p>
 
 <hr>
 <p style="margin-bottom:1cm; margin-top:1cm;">
