--- a/index.html
+++ b/index.html
@@ -33,15 +33,15 @@
 </head>
 <!--0A2162 --> <!--"Helvetica", "Arial"-->
 <body>
-<img style="float:right" width="400"  src="images/easton.png" hspace="30px" vspace="20px" >
+<img style="float:right" width="375"  src="images/easton.png" hspace="30px" vspace="20px" >
 <!--img style="float:right" width="375"  src="photographs/newheadshot.png" hspace="20px" vspace="40px" -->
 <h1 style="margin-top:27mm; margin-bottom:2mm;">Matthew Easton</h1>
 <font face="courier,Arial">me2713 (AT) columbia (DOT) edu</font>
 
-<p style="margin-top:40mm; margin-bottom:0mm">
+<p style="margin-top:50mm; margin-bottom:0mm">
 I am a fifth-year economics PhD student at <a href="https://econ.columbia.edu/"> Columbia University</a>. My current research interests are urban and spatial economics. <br>
 
-You can find my [<a href="files/cv.pdf">PDF here.</a>]
+You can find my <a href="files/cv.pdf">CV here.</a>
 </p>
 
 <br>
@@ -64,7 +64,7 @@ You can find my [<a href="files/cv.pdf">PDF here.</a>]
         <author>
         with Robert Barsky.
       </author>
-        <journal> Federal Reserve Bank of Chicago Economic Perspectives, 2021-01. </journal> [<a href="files/ep2021_01.pdf">PDF</a>]
+        <journal> Federal Reserve Bank of Chicago Economic Perspectives, 2021-01. </journal> <br> [<a href="files/ep2021_01.pdf">PDF</a>]
         </li>
 
 </ul>
@@ -80,7 +80,7 @@ You can find my [<a href="files/cv.pdf">PDF here.</a>]
         <author>
         with Patrick Farrell.
       </author>
-        <journal> December 2023. </journal> [<a href="files/zipf_ef.pdf">PDF</a>]
+        <journal> December 2023. </journal> <br> [<a href="files/zipf_ef.pdf">PDF</a>]
         </li>
 
   <li>
@@ -90,7 +90,7 @@ You can find my [<a href="files/cv.pdf">PDF here.</a>]
     <author>
     with Robert Barsky and Avery Bogusz.
   </author>
-    <journal> Chicago Fed Working Paper Series, 2022. </journal> [<a href="files/interestRates_bbe.pdf">PDF</a>]
+    <journal> Chicago Fed Working Paper Series, 2022. </journal> <br> [<a href="files/interestRates_bbe.pdf">PDF</a>]
     </li>
 
 </ul>
