--- a/index.html
+++ b/index.html
@@ -33,15 +33,13 @@
 </head>
 <!--0A2162 --> <!--"Helvetica", "Arial"-->
 <body>
-<img style="float:right" width="375"  src="images/easton.png" hspace="30px" vspace="20px" >
+<img style="float:right" width="400"  src="images/easton.png" hspace="30px" vspace="20px" >
 <!--img style="float:right" width="375"  src="photographs/newheadshot.png" hspace="20px" vspace="40px" -->
 <h1 style="margin-top:27mm; margin-bottom:2mm;">Matthew Easton</h1>
 <font face="courier,Arial">me2713 (AT) columbia (DOT) edu</font>
 
-<p style="margin-top:50mm; margin-bottom:0mm">
-I am a fifth-year economics PhD student at <a href="https://econ.columbia.edu/"> Columbia University</a>. My current research interests are urban and spatial economics. <br>
-
-You can find my <a href="files/cv.pdf">CV here.</a>
+<p style="margin-top:10mm; margin-bottom:0mm">
+I am a fifth-year economics PhD student at <a href="https://econ.columbia.edu/"> Columbia University</a>. My current research interests are urban and spatial economics. You can find my <a href="files/cv.pdf">CV here.</a>
 </p>
 
 <br>
