--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	font-size:1.03em;
 	font-family:"Helvetica", "Arial", sans-serif;
     }
-    author { font-style: italic; }
+    journal { font-style: italic; }
     conference { font-weight: bold; }
     ptitle {
 	color: #000000;
@@ -125,56 +125,6 @@ I am a fifth-year economics PhD student at <a href="https://econ.columbia.edu/">
 </ul>
  <br> </p>
 
-<hr>
-<p style="margin-bottom:1cm; margin-top:1cm;">
- <h2 style="margin-bottom:5mm;"> Courses: </h2><ul>
-    <li>
-        <ptitle>
-        18.335: Introduction to Numerical Methods,
-        </ptitle>
-       MIT, Spring 2024
-        </li>
-    
-
-  <li>
-    <ptitle>
-    18.330: Introduction to Numerical Analysis,
-    </ptitle>
-   MIT, Fall 2023
-    </li>
-
-     <li>
-       <ptitle>
-       Math 232: Integral Vector Calculus,
-       </ptitle>
-      Penn State, Fall 2013
-       </li>
-
-       <li>
-         <ptitle>
-         Math 041: Trigonometry and Analytic Geometry,
-         </ptitle>
-        Penn State, Spring 2013
-         </li>
-
-       </ul>
-
-
-</p><br>
-
-<hr>
-<p style="margin-bottom:1cm; margin-top:1cm;">
-
-  <h2 style="margin-bottom:5mm;"> Outreach: </h2>
-  Here are a few programs outside of my core responsibilities as an academic mathematician that I take part in. If you are a K-12 math teacher or student, some of these programs may be of interest to you. <br> <br>
-
-
-
-  <b>MathROOTS:</b> MathROOTS is a two-week summer program hosted by MIT Math for high-potential high school students from underrepresented backgrounds or underserved communities. I am in charge of the academic side of the program. More details can be found <a href="http://mathroots.mit.edu">here</a>. <br> <br>
-
-  <b> Mathical: </b> The Mathical Book Prize, awarded by MSRI, is an annual award for fiction and non-fiction books that inspire children of all ages to see math in the world around them. I am a chair of the selection committee, and am more broadly involved in the dissemination of these fantastic books. More details can be found <a href="https://www.mathicalbooks.org">here</a>. <br> <br>
-
-  <b> MoMath: </b> The National Museum of Mathematics highlights the role of math in illuminating the patterns and structures all around us. I serve on the board of the museum and am involved in the exhibits and programming of the museum. More details can be found <a href="https://momath.org ">here</a>. <br> <br>
 
 
 
