--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@ I am a fifth-year economics PhD student at <a href="https://econ.columbia.edu/">
 
 
 <hr>
-<p> <font size="-1"> &copy; 2024 Matthew Easton -- template shamelessly stolen from <a href="https://math.mit.edu/~urschel/">John Urschel</a>. <br>
+<p> <font size="-1"> &copy; 2024 Matthew Easton -- template (especially) shamelessly stolen from <a href="https://math.mit.edu/~urschel/">John Urschel</a>. <br>
  </font>
 
 
