--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
 <body>
 <img style="float:right" width="375"  src="images/easton.png" hspace="30px" vspace="20px" >
 <!--img style="float:right" width="375"  src="photographs/newheadshot.png" hspace="20px" vspace="40px" -->
-<h1 style="margin-top:0mm; margin-bottom:2mm;">Matthew Easton</h1>
+<h1 style="margin-top:30mm; margin-bottom:2mm;">Matthew Easton</h1>
 <font face="courier,Arial">me2713 (AT) columbia (DOT) edu</font>
 
-<p style="margin-top:10mm; margin-bottom:0mm">
+<p style="margin-top:30mm; margin-bottom:0mm">
 I am a fifth-year economics PhD student at <a href="https://econ.columbia.edu/"> Columbia University</a>. My current research interests are urban and spatial economics. You can find my <a href="files/cv.pdf">CV here.</a>
 </p>
 
@@ -73,7 +73,7 @@ I am a fifth-year economics PhD student at <a href="https://econ.columbia.edu/">
 
     <li>
         <ptitle>
-        Populations in Spatial Equilibrium
+        Populations in Spatial Equilibrium,
       </ptitle>
         <author>
         with Patrick Farrell.
