--- a/index.html
+++ b/index.html
@@ -38,8 +38,12 @@
 <h1 style="margin-top:30mm; margin-bottom:2mm;">Matthew Easton</h1>
 <font face="courier,Arial">me2713 (AT) columbia (DOT) edu</font>
 
-<p style="margin-top:30mm; margin-bottom:0mm">
-I am a fifth-year economics PhD student at <a href="https://econ.columbia.edu/"> Columbia University</a>. My current research interests are urban and spatial economics. You can find my <a href="files/cv.pdf">CV here.</a>
+<p style="margin-top:35mm; margin-bottom:0mm">
+I am a fifth-year economics PhD student at <a href="https://econ.columbia.edu/"> Columbia University</a>. My current research interests are urban and spatial economics. Previously, I was a senior research assistant at the Federal Reserve Bank of Chicago.
+<br>
+	
+You can find my <a href="files/cv.pdf">CV here.</a>
+	
 </p>
 
 <br>
