--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
 <font face="courier,Arial">me2713 (AT) columbia (DOT) edu</font>
 
 <p style="margin-top:40mm; margin-bottom:0mm">
-I am a fifth-year economics PhD student at <a href="https://econ.columbia.edu/"> Columbia University</a>. My current research interests are urban and spatial economics. Previously, I was a senior research assistant at the Federal Reserve Bank of Chicago.
+I am a fifth-year economics PhD student at <a href="https://econ.columbia.edu/"> Columbia University</a>. My current research interests are urban and spatial economics. I was previously a senior research assistant at the Federal Reserve Bank of Chicago.
+
 <br>
 	
 You can find my <a href="files/cv.pdf">CV here.</a>
