--- a/index.html
+++ b/index.html
@@ -36,14 +36,14 @@
 <img style="float:right" width="375"  src="images/easton.png" hspace="30px" vspace="20px" >
 <!--img style="float:right" width="375"  src="photographs/newheadshot.png" hspace="20px" vspace="40px" -->
 <h1 style="margin-top:30mm; margin-bottom:2mm;">Matthew Easton</h1>
-<font face="courier,Arial">me2713 (AT) columbia (DOT) edu</font>
+<font face="courier,Arial">me2713 at columbia dot edu</font>
 
 <p style="margin-top:40mm; margin-bottom:0mm">
 I am a fifth-year economics PhD student at <a href="https://econ.columbia.edu/"> Columbia University</a>. My current research interests are urban and spatial economics. I was previously a senior research assistant at the Federal Reserve Bank of Chicago.
 </p> <br>
 
 <p>	
-You can find my <a href="files/cv.pdf">CV here.</a>	
+You can find my CV <a href="files/cv.pdf">here.</a>	
 </p>
 
 <br>
@@ -82,7 +82,7 @@ You can find my <a href="files/cv.pdf">CV here.</a>
         <author>
         with Patrick Farrell.
       </author>
-        <journal> December 2023. </journal> <br> [<a href="files/zipf_ef.pdf">PDF</a>]
+        <journal>  </journal> December 2023. <br> [<a href="files/zipf_ef.pdf">PDF</a>]
         </li>
 
   <li>
@@ -92,7 +92,7 @@ You can find my <a href="files/cv.pdf">CV here.</a>
     <author>
     with Robert Barsky and Avery Bogusz.
   </author>
-    <journal> Chicago Fed Working Paper Series, 2022. </journal> <br> [<a href="files/interestRates_bbe.pdf">PDF</a>]
+    <journal> Chicago Fed Working Paper Series, </journal> 2022. <br> [<a href="files/interestRates_bbe.pdf">PDF</a>]
     </li>
 
 </ul>
