--- a/index.html
+++ b/index.html
@@ -75,15 +75,24 @@ You can find my CV <a href="files/cv.pdf">here.</a>
 
 <ul>
 
-    <li>
-        <ptitle>
-        Populations in Spatial Equilibrium,
-      </ptitle>
-        <author>
-        with Patrick Farrell.
-      </author>
-        <journal>  </journal> December 2023. <br> [<a href="files/zipf_ef.pdf">PDF</a>]
-        </li>
+<li>
+  <ptitle>
+  Testing Schelling’s Models of Residential Segregation: A Discrete Choice Approach with Spatial Spillovers,
+</ptitle>
+  <author>
+  with Donald Davis and Stephan Thies.
+</author>
+  </li>
+
+<li>
+ <ptitle>
+ Populations in Spatial Equilibrium,
+</ptitle>
+ <author>
+ with Patrick Farrell.
+</author>
+ <journal>  </journal> August 2023. (New version coming soon) <br> [<a href="files/zipf_ef.pdf">PDF</a>]
+</li>
 
   <li>
     <ptitle>
@@ -117,14 +126,6 @@ You can find my CV <a href="files/cv.pdf">here.</a>
   </author>
     </li>
 
-  <li>
-  <ptitle>
-  Testing Schelling’s Models of Residential Segregation: A Discrete Choice Approach with Spatial Spillovers,
-</ptitle>
-  <author>
-  with Donald Davis and Stephan Thies.
-</author>
-  </li>
 
 </ul>
  <br> </p>
