--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ You can find my CV <a href="files/cv.pdf">here.</a>
   Testing Schelling’s Models of Residential Segregation: A Discrete Choice Approach with Spatial Spillovers,
 </ptitle>
   <author>
-  with Donald Davis and Stephan Thies.
+  with Donald Davis and Stephan Thies. <br>
 </author>
   </li>
 
@@ -91,7 +91,7 @@ You can find my CV <a href="files/cv.pdf">here.</a>
  <author>
  with Patrick Farrell.
 </author>
- <journal>  </journal> August 2023. (New version coming soon) <br> [<a href="files/zipf_ef.pdf">PDF</a>]
+ <journal>  </journal> August 2023. (New version coming soon) <br> [<a href="files/zipf_ef.pdf">PDF</a>] <br>
 </li>
 
   <li>
@@ -101,7 +101,7 @@ You can find my CV <a href="files/cv.pdf">here.</a>
     <author>
     with Robert Barsky and Avery Bogusz.
   </author>
-    <journal> Chicago Fed Working Paper Series, </journal> 2022. <br> [<a href="files/interestRates_bbe.pdf">PDF</a>]
+    <journal> Chicago Fed Working Paper Series, </journal> 2022. <br> [<a href="files/interestRates_bbe.pdf">PDF</a>] <br>
     </li>
 
 </ul>
@@ -112,7 +112,7 @@ You can find my CV <a href="files/cv.pdf">here.</a>
 
   <li>
     <ptitle>
-    Why Have Warmer Cities Grown?
+    Why Have Warmer Cities Grown? <br>
   </ptitle>
     </li>
 
