--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@ You can find my CV <a href="files/cv.pdf">here.</a>
   Testing Schelling’s Models of Residential Segregation: A Discrete Choice Approach with Spatial Spillovers,
 </ptitle>
   <author>
-  with Donald Davis and Stephan Thies. <br>
+  with Donald Davis and Stephan Thies. 
 </author>
-  </li>
+  </li> <br>
 
 <li>
  <ptitle>
@@ -91,8 +91,8 @@ You can find my CV <a href="files/cv.pdf">here.</a>
  <author>
  with Patrick Farrell.
 </author>
- <journal>  </journal> August 2023. (New version coming soon) <br> [<a href="files/zipf_ef.pdf">PDF</a>] <br>
-</li>
+ <journal>  </journal> August 2023. (New version coming soon) <br> [<a href="files/zipf_ef.pdf">PDF</a>] 
+</li> <br>
 
   <li>
     <ptitle>
@@ -101,8 +101,8 @@ You can find my CV <a href="files/cv.pdf">here.</a>
     <author>
     with Robert Barsky and Avery Bogusz.
   </author>
-    <journal> Chicago Fed Working Paper Series, </journal> 2022. <br> [<a href="files/interestRates_bbe.pdf">PDF</a>] <br>
-    </li>
+    <journal> Chicago Fed Working Paper Series, </journal> 2022. <br> [<a href="files/interestRates_bbe.pdf">PDF</a>] 
+    </li> <br>
 
 </ul>
 
@@ -112,9 +112,9 @@ You can find my CV <a href="files/cv.pdf">here.</a>
 
   <li>
     <ptitle>
-    Why Have Warmer Cities Grown? <br>
+    Why Have Warmer Cities Grown? 
   </ptitle>
-    </li>
+    </li> <br>
 
 
   <li>
