--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 	color: #000000;
 	font-weight: bolder;
     }
+    ul li { padding: 5px 0px; }
 </style>
 </head>
 <!--0A2162 --> <!--"Helvetica", "Arial"-->
@@ -82,7 +83,7 @@ You can find my CV <a href="files/cv.pdf">here.</a>
   <author>
   with Donald Davis and Stephan Thies. 
 </author>
-  </li> <br>
+  </li> 
 
 <li>
  <ptitle>
@@ -92,7 +93,7 @@ You can find my CV <a href="files/cv.pdf">here.</a>
  with Patrick Farrell.
 </author>
  <journal>  </journal> August 2023. (New version coming soon) <br> [<a href="files/zipf_ef.pdf">PDF</a>] 
-</li> <br>
+</li> 
 
   <li>
     <ptitle>
@@ -102,7 +103,7 @@ You can find my CV <a href="files/cv.pdf">here.</a>
     with Robert Barsky and Avery Bogusz.
   </author>
     <journal> Chicago Fed Working Paper Series, </journal> 2022. <br> [<a href="files/interestRates_bbe.pdf">PDF</a>] 
-    </li> <br>
+    </li> 
 
 </ul>
 
@@ -114,7 +115,7 @@ You can find my CV <a href="files/cv.pdf">here.</a>
     <ptitle>
     Why Have Warmer Cities Grown? 
   </ptitle>
-    </li> <br>
+    </li> 
 
 
   <li>
