--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 	color: #000000;
 	font-weight: bolder;
     }
-    ul li { padding: 0px 10px; }
+    ul li { margin-bottom: 10px; }
 </style>
 </head>
 <!--0A2162 --> <!--"Helvetica", "Arial"-->
